# Core.SamplePlugin

./: .gitignore  CMakeLists.txt  Directory.Build.props  README.md  SampleComponent.h  _Plugin.h  ci_build.sh
.github/workflows/: build.yml
CSharp/: Plugin.csproj  Plugin.i
